# cs5246-text-mining

./: .gitignore  .pylintrc  README.md  pipeline.ipynb  pyproject.toml
utils/dataset/: articles.py  build.py  download.py  labels.py
utils/date_extraction/: extract.py
utils/deduplication/: deduplicate.py
utils/disaster_classification/: classify.py
utils/event_extraction/: lda.py  sw1k.csv
utils/impact_extraction/: extract.py
utils/location_extraction/: extract.py
utils/severity_extraction/: extract.py
utils/stocks/: correlation.py
